--- a/aeson-versioned-sideloading.cabal
+++ b/aeson-versioned-sideloading.cabal
@@ -36,6 +36,7 @@ test-suite aeson-versioned-sideloading-test
                      , aeson-versioned
                      , aeson-versioned-sideloading
                      , containers
+                     , bytestring
                      , tagged
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
