InflateM defines a constraint instead of a concrete monad

--- a/aeson-versioned-sideloading.cabal
+++ b/aeson-versioned-sideloading.cabal
@@ -24,6 +24,7 @@ library
                      , text
                      , singletons
                      , containers
+                     , transformers
   default-language:    Haskell2010
 
 test-suite aeson-versioned-sideloading-test
