--- a/aeson-versioned-sideloading.cabal
+++ b/aeson-versioned-sideloading.cabal
@@ -25,6 +25,7 @@ library
                      , singletons
                      , containers
                      , transformers
+                     , errors
   default-language:    Haskell2010
 
 test-suite aeson-versioned-sideloading-test
